# TRT_ConvActPool_Reverse

./: AGENTS.md  CMakeLists.txt  README.md
.github/prompts/: add-bench-version.prompt.md
.github/skills/trt-sass-profile/: SKILL.md
docs/: blackwell_trt_profile.md  tensorrt_fused_core_profile.md  trt_kernel_gap_plan.md  trt_kernel_implementation_schemes.md  trt_sass_reverse_v45.md  v65_sass_diff.md
results/: trt_conv_act_pool_sm86.sass  trt_conv_act_pool_sm86_res_usage.txt  v64_sm86.sass
results/blackwell/: trt_conv_act_pool_sm120.sass  trt_conv_act_pool_sm120_res_usage.txt
scripts/: build.sh  check_tensorrt.py  extract_engine_fatbin.py  make_resnet_stem_onnx.py  run_resnet_stem.sh  run_tensorrt_python.py  run_tensorrt_stem.sh  sass_summary.py
src/: bench_resnet_stem.cu  bench_resnet_stem_v10.cu  bench_resnet_stem_v12.cu  bench_resnet_stem_v13.cu  bench_resnet_stem_v15.cu  bench_resnet_stem_v16.cu  bench_resnet_stem_v17.cu  bench_resnet_stem_v19.cu  bench_resnet_stem_v2.cu  bench_resnet_stem_v20.cu  bench_resnet_stem_v23.cu  bench_resnet_stem_v24.cu  bench_resnet_stem_v26.cu  bench_resnet_stem_v28.cu  bench_resnet_stem_v29.cu  bench_resnet_stem_v3.cu  bench_resnet_stem_v30.cu  bench_resnet_stem_v31.cu  bench_resnet_stem_v33.cu  bench_resnet_stem_v34.cu  bench_resnet_stem_v35.cu  bench_resnet_stem_v36.cu  bench_resnet_stem_v37.cu  bench_resnet_stem_v38.cu  bench_resnet_stem_v39.cu  bench_resnet_stem_v4.cu  bench_resnet_stem_v42.cu  bench_resnet_stem_v43.cu  bench_resnet_stem_v44.cu  bench_resnet_stem_v45.cu  bench_resnet_stem_v47.cu  bench_resnet_stem_v48.cu  bench_resnet_stem_v5.cu  bench_resnet_stem_v50.cu  bench_resnet_stem_v51.cu  bench_resnet_stem_v55.cu  bench_resnet_stem_v56.cu  bench_resnet_stem_v57.cu  bench_resnet_stem_v58.cu  bench_resnet_stem_v6.cu  (+16 more)
src/blackwell/: bench_stem_sm120_v1.cu  bench_stem_sm120_v2.cu  bench_stem_sm120_v3.cu  build_sm120.sh  make_stem_int8_qdq_onnx.py  make_stem_int8_unfusable_onnx.py  run_trt_sm120.py
src/legacy/: bench_resnet_stem_v11.cu  bench_resnet_stem_v14.cu  bench_resnet_stem_v18.cu  bench_resnet_stem_v21.cu  bench_resnet_stem_v22.cu  bench_resnet_stem_v25.cu  bench_resnet_stem_v27.cu  bench_resnet_stem_v32.cu  bench_resnet_stem_v40.cu  bench_resnet_stem_v41.cu  bench_resnet_stem_v46.cu  bench_resnet_stem_v49.cu  bench_resnet_stem_v52.cu  bench_resnet_stem_v54.cu  bench_resnet_stem_v59.cu  bench_resnet_stem_v60.cu  bench_resnet_stem_v9.cu
tools/: dump_cuda_modules.c
